fixed ip port to 8017

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="#">
           <fieldset> 
             <p>
-		welcome to the SnowRobin	
+		welcome to the Clusterchat	
             </p>
 
             <label for="nick">what your name</label>
